@@ -1,13 +1,18 @@
 #ifndef DUNGEON
 #define DUNGEON
 
+#include "entity.h"
+
 #define CELL(x,y) ((x%DUNGEON_WIDTH) + (y*DUNGEON_WIDTH))
 
 typedef struct Dungeon{
     unsigned * screen;
+    unsigned * _distanceMap;
 
     int ** roomInfo;
     int roomCount;
+
+    Entity * player;
 } Dungeon;
 
 Dungeon * createDungeon();
