@@ -6,3 +6,5 @@
 1/30/18 Hallways, better room generation
 1/30/18 Command line arguments
 1/30/18 Save/Load
+2/06/18 Fixed Save/Load bug (mostly)
+2/06/18 Priority Queue, Player Icon
